--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,15 @@
 {
-  "name": "Interactive-Framework",
-  "version": "0.0.1",
+  "name": "Free-People-Interactive-Style-Guide",
+  "version": "0.0.2",
   "authors": [
-    "Mike-T-Mitchell <michael.t.mitchell@outlook.com>"
+    "Mike-T-Mitchell <michael.t.mitchell@outlook.com>",
+    "Christian Lohr<christian.lohr@gmail.com>"
   ],
-  "description": "Responsive Interactive Framework",
+  "description": "Free People Responsive Interactive Style Guide",
   "keywords": [
     "responsive",
-    "framework"
+    "framework",
+    "styleguide"
   ],
   "license": "MIT",
   "private": true,
@@ -17,5 +19,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "modernizr": "~2.8.2",
+    "picturefill": "~2.0.0",
+    "jquery": "1.11.1",
+    "lodash": "~2.4.1",
+    "foundation5-sass": "~0.0.1"
+  }
 }
