--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "PackAndCompress",
-  "title": "Grunt Task to Compress and Minify JS and SASS CSS",
+  "name": "FP-Style-Guide",
+  "title": "Free People Style Guide",
   "version": "1.0.0",
   "devDependencies": {
-    "matchdep": "0.3.0",
-    "grunt": "0.4.1",
-    "grunt-contrib-compass": "^0.8.0",
-    "grunt-contrib-uglify": "0.2.0",
-    "grunt-contrib-watch": "0.5.3",
-    "grunt-spritesmith": "^1.26.0"
+      "gulp": "^3.6.1",
+      "gulp-compass": "^1.1.8",
+      "gulp-livereload": "^1.3.1",
+      "gulp-concat": "^2.2.0",
+      "gulp-uglify": "^0.2.1",
+      "vinyl-source-stream": "^0.1.1",
+      "glob": "^3.2.9",
+      "canvas": "^1.1.3",
+      "gulp.spritesmith": "^0.5.0",
+      "gulp-imagemin": "^0.5.0",
+      "imagemin-pngcrush": "^0.1.0",
+      "browserify": "^3.44.2",
+      "gulp-mocha-phantomjs": "^0.2.1",
+      "mocha": "^1.19.0",
+      "should": "^3.3.1",
+      "gulp-jsdoc": "^0.1.4"
   }
 }
