--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
   "name": "FP-Style-Guide",
-  "title": "Free People Style Guide",
-  "version": "1.0.0",
+  "description": "Free People Responsive Interactive Style Guide",
+  "version": "0.0.1",
+  "author": "Christian Lohr<christian.lohr@gmail.com>",
+  "contributors": [
+    "Mike-T-Mitchell <michael.t.mitchell@outlook.com>",
+    "David Annopolsky <dannopolsky@freepeople.com>"
+  ],
+  "keywords": [
+    "responsive",
+    "framework",
+    "styleguide"
+  ],
+  "license": "MIT",
+  "repository": "freepeople/styleguide",
   "devDependencies": {
-      "gulp": "^3.6.1",
-      "gulp-compass": "^1.1.8",
-      "gulp-livereload": "^1.3.1",
-      "gulp-concat": "^2.2.0",
-      "gulp-uglify": "^0.2.1",
-      "vinyl-source-stream": "^0.1.1",
-      "glob": "^3.2.9",
-      "canvas": "^1.1.3",
-      "gulp.spritesmith": "^0.5.0",
-      "gulp-imagemin": "^0.5.0",
-      "imagemin-pngcrush": "^0.1.0",
-      "browserify": "^3.44.2",
-      "gulp-mocha-phantomjs": "^0.2.1",
-      "mocha": "^1.19.0",
-      "should": "^3.3.1",
-      "gulp-jsdoc": "^0.1.4"
+    "browserify": "^3.44.2",  
+    "browsernizr": "^1.0.2",
+    "canvas": "^1.1.3",
+    "glob": "^3.2.9",
+    "gulp": "^3.6.1",
+    "gulp-compass": "^1.1.8",
+    "gulp-concat": "^2.2.0",
+    "gulp-imagemin": "^0.5.0",
+    "gulp-jsdoc": "^0.1.4",
+    "gulp-livereload": "^1.3.1",
+    "gulp-mocha-phantomjs": "^0.2.1",
+    "gulp-uglify": "^0.2.1",
+    "gulp.spritesmith": "^0.5.0",
+    "imagemin-pngcrush": "^0.1.0",
+    "jquery": "^1.11.1",
+    "lodash": "^2.4.1",
+    "mocha": "^1.19.0",
+    "napa": "^0.4.1",
+    "picturefill": "^0.1.0",
+    "should": "^3.3.1",
+    "vinyl-source-stream": "^0.1.1"
+  },
+  "scripts": {
+    "install": "napa clohr/Foundation5-SASS:foundation-sass"
   }
 }
