--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "browserify": "^3.44.2",
     "canvas": "^1.1.3",
+    "dedupe": "^0.2.8",
     "glob": "^3.2.9",
     "gulp": "^3.6.1",
     "gulp-compass": "^1.1.8",
@@ -34,6 +35,7 @@
     "napa": "^0.4.1",
     "picturefill": "^0.1.0",
     "should": "^3.3.1",
+    "vinyl-buffer": "0.0.0",
     "vinyl-source-stream": "^0.1.1"
   },
   "scripts": {
