--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.6.1",
     "gulp-compass": "^1.1.8",
     "gulp-concat": "^2.2.0",
+    "gulp-highlight": "0.0.3",
     "gulp-imagemin": "^0.5.0",
     "gulp-jsdoc": "^0.1.4",
     "gulp-livereload": "^1.3.1",
