--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
     "gulp-imagemin": "^0.5.0",
     "gulp-jsdoc": "^0.1.4",
     "gulp-livereload": "^1.3.1",
-    "gulp-mocha-phantomjs": "^0.2.1",
     "gulp-uglify": "^0.2.1",
     "gulp.spritesmith": "^0.5.0",
     "imagemin-pngcrush": "^0.1.0",
     "jquery": "^1.11.1",
     "lodash": "^2.4.1",
-    "mocha": "^1.19.0",
     "napa": "^0.4.1",
-    "should": "^3.3.1",
+    "picturefill": "^0.1.0",
+    "tap-spec": "^0.2.0",
+    "tape": "^2.13.3",
     "vinyl-buffer": "0.0.0",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^0.10.2",
-    "picturefill": "^0.1.0"
+    "watchify": "^0.10.2"
   },
   "scripts": {
-    "install": "napa"
+    "install": "napa",
+    "test": "tape test/*.js | tap-spec"
   },
   "napa": {
     "foundation-sass": "clohr/Foundation5-SASS",
