--- a/package.json
+++ b/package.json
@@ -1,53 +1,55 @@
 {
-  "name": "FP-Style-Guide",
-  "description": "Free People Responsive Interactive Style Guide",
-  "version": "0.0.1",
-  "author": "Christian Lohr<christian.lohr@gmail.com>",
-  "contributors": [
-    "Mike-T-Mitchell <michael.t.mitchell@outlook.com>",
-    "David Annopolsky <dannopolsky@freepeople.com>"
-  ],
-  "keywords": [
-    "responsive",
-    "framework",
-    "styleguide"
-  ],
-  "license": "MIT",
-  "repository": "freepeople/styleguide",
-  "devDependencies": {
-    "browserify": "^3.44.2",
-    "canvas": "^1.1.3",
-    "dedupe": "^0.2.8",
-    "glob": "^4.0.3",
-    "gulp": "^3.6.1",
-    "gulp-compass": "^1.1.8",
-    "gulp-concat": "^2.2.0",
-    "gulp-highlight": "0.0.3",
-    "gulp-imagemin": "^0.5.0",
-    "gulp-jsdoc": "^0.1.4",
-    "gulp-jshint": "^1.7.0",
-    "gulp-livereload": "^1.3.1",
-    "gulp-uglify": "^0.2.1",
-    "gulp.spritesmith": "^0.5.0",
-    "imagemin-pngcrush": "^0.1.0",
-    "jquery": "^1.11.1",
-    "jshint-stylish": "^0.4.0",
-    "lodash": "^2.4.1",
-    "napa": "^0.4.1",
-    "picturefill": "^0.1.0",
-    "tap-spec": "^0.2.0",
-    "tape": "^2.13.3",
-    "vinyl-buffer": "0.0.0",
-    "vinyl-source-stream": "^0.1.1",
-    "watchify": "^0.10.2"
-  },
-  "scripts": {
-    "install": "napa",
-    "test": "tape test/*.js | tap-spec",
-    "pretest": "gulp lint"
-  },
-  "napa": {
-    "foundation-sass": "clohr/Foundation5-SASS",
-    "modernizr": "Modernizr/Modernizr"
-  }
+    "name": "FP-Style-Guide",
+    "description": "Free People Responsive Interactive Style Guide",
+    "version": "0.0.1",
+    "author": "Christian Lohr<christian.lohr@gmail.com>",
+    "contributors": [
+        "Mike-T-Mitchell <michael.t.mitchell@outlook.com>",
+        "David Annopolsky <dannopolsky@freepeople.com>"
+    ],
+    "keywords": [
+        "responsive",
+        "framework",
+        "styleguide"
+    ],
+    "license": "MIT",
+    "repository": "freepeople/styleguide",
+    "devDependencies": {
+        "browserify": "^3.44.2",
+        "dedupe": "^0.2.8",
+        "glob": "^4.0.3",
+        "gulp": "^3.6.1",
+        "gulp-compass": "^1.1.8",
+        "gulp-concat": "^2.2.0",
+        "gulp-highlight": "0.0.3",
+        "gulp-imagemin": "^0.5.0",
+        "gulp-jsdoc": "^0.1.4",
+        "gulp-jshint": "^1.7.0",
+        "gulp-livereload": "^1.3.1",
+        "gulp-uglify": "^0.2.1",
+        "gulp.spritesmith": "^0.5.0",
+        "imagemin-pngcrush": "^0.1.0",
+        "jquery": "^1.11.1",
+        "jshint-stylish": "^0.4.0",
+        "lodash": "^2.4.1",
+        "napa": "^0.4.1",
+        "picturefill": "^0.1.0",
+        "tap-spec": "^0.2.0",
+        "tape": "^2.13.3",
+        "vinyl-buffer": "0.0.0",
+        "vinyl-source-stream": "^0.1.1",
+        "watchify": "^0.10.2"
+    },
+    "scripts": {
+        "install": "napa",
+        "test": "tape test/*.js | tap-spec",
+        "pretest": "gulp lint"
+    },
+    "napa": {
+        "foundation-sass": "clohr/Foundation5-SASS",
+        "modernizr": "Modernizr/Modernizr"
+    },
+    "optionalDependencies": {
+        "canvas": "^1.1.5"
+    }
 }
