--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
         "tape": "^2.13.3",
         "vinyl-buffer": "0.0.0",
         "vinyl-source-stream": "^0.1.1",
-        "watchify": "^0.10.2"
+        "watchify": "^0.10.2",
+        "zombie": "^2.0.0-alpha31"
     },
     "scripts": {
         "install": "napa",
-        "test": "tape test/*.js | tap-spec",
+        "test": "node test/*.js | faucet",
         "pretest": "gulp lint"
     },
     "napa": {
